--- a/Readme
+++ b/Readme
@@ -1,1 +1,4 @@
  Assignment and Projects for the Internet Programming Class in Missouri Valley College
+
+
+Assignment # 1 - Single HTML page with CSS styling.
