--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
 Assignment and Projects for the Internet Programming Class in Missouri Valley College
 
 Assignment # 1 - Single HTML page with CSS styling.
+Assignment # 2 - Single PHP page with MySQL connectivity, in order to input, store and display data.
