--- a/Readme
+++ b/Readme
@@ -2,3 +2,4 @@ Assignment and Projects for the Internet Programming Class in Missouri Valley Co
 
 Assignment # 1 - Single HTML page with CSS styling.
 Assignment # 2 - Single PHP page with MySQL connectivity, in order to input, store and display data.
+Assignment # 3 - Login and Sign Up Website.
